--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <title>Document</title>
   <!--link a css-->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/styles/loginStyle.css">
+  <link rel="stylesheet" href="src/styles/mapViewStyle.css">
+  <link rel="stylesheet" href="src/styles/placeInfoStyle.css">
   <!--CDN Iconos-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <!--CDN Bootstrap-->
+  
 </head>
   <body>
     <section class="loginMainContainer"> <!-- Seccion login -->
@@ -72,5 +77,7 @@
       </div> <!--Cierre InfoPlaceText-->
     </section>  <!-- Cierre Seccion PlaceInfo -->
   
+  <!--Script de Firebase---> 
+  <!--Script de Bootstrap--->   
   </body>
 </html>
