--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Bienvenido usuario</p>
         </div>
         <!--Cierre Header-->
-        <div>
+        <div id="mapContainer">
             <!-- map place -->
         </div>
         <div>
