--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-<<<<<<< HEAD
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,50 +13,38 @@
   <link rel="stylesheet" href="src/styles/placeInfoStyle.css">
   <!--CDN Iconos-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <!--Tipografia-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" >
   <!--CDN Bootstrap-->
-  
-=======
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!--link a css-->
-    <link rel="stylesheet" href="style.css">
-    <!--CDN Iconos-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
->>>>>>> b620be88b4da47b0f92561f58dbdaa9669ccf141
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
     <section class="loginMainContainer">
         <!-- Seccion login -->
-        <div>
+        <div class="containter logoContainer" >
             <!--logo contenedor-->
-            <img class="logoImg" alt="logo de la aplicacion" src="" />
+            <img class="logoImg" alt="logo de la aplicacion" src="src/img/logoMiercoles.jpeg" />
         </div>
-        <div>
+        <div class="optionsContainer container">
             <!--opciones de interfaz-->
-            <i class="fas fa-headphones"></i>
-            <p>Dictado por voz</p>
-            <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
-
-            <i class="fas fa-adjust"></i>
-            <p>Color contraste</p>
-            <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
-        </div>
-        <div>
-            <!--contenedor botones de login-->
-        </div>
+            <div class="option1Container row">
+              <i class="iconsOptions fas fa-headphones"></i>
+              <p class="subTitle textOptions" >Dictado por voz </p> 
+              <label class="switch">
+                <input type="checkbox"/>
+                <div class="slider">
+                  <span class="bolita"></span>  
+                </div>
+              </label>
+            
+            </div>
+         </div>
+          <!--contenedor botones de login-->
     </section>
     <!-- Cierre Seccion login -->
 
-    <section>
+    <section class="mapViewMainContainer" >
         <!-- Seccion MapView -->
         <div>
             <!--Header-->
@@ -79,7 +66,7 @@
     <!-- Cierre Seccion MapView -->
 
 
-    <section>
+    <section class="placeInfoMainContainer">
         <!-- Seccion PlaceInfo-->
         <div>
             <!--Header-->
@@ -124,5 +111,9 @@
         };
         firebase.initializeApp(config);
     </script>
+    <!--Script de bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
