--- a/index.html
+++ b/index.html
@@ -27,19 +27,28 @@
             <img class="logoImg" alt="logo de la aplicacion" src="src/img/logoMiercoles.jpeg" />
         </div>
         <div class="optionsContainer container">
-            <!--opciones de interfaz-->
-            <div class="option1Container row">
-              <i class="iconsOptions fas fa-headphones"></i>
-              <p class="subTitle textOptions" >Dictado por voz </p> 
-              <label class="switch">
-                <input type="checkbox"/>
-                <div class="slider">
-                  <span class="bolita"></span>  
-                </div>
-              </label>
-            
-            </div>
-         </div>
+          <!--opciones de interfaz-->
+          <div class="option1Container row">
+            <i class="iconsOptions fas fa-headphones"></i>
+            <p class="subTitle textOptions" >Dictado por voz </p> 
+            <label class="switch">
+              <input id="checkbox1" type="checkbox"/>
+              <div id="slider1" class="slider">
+                <span id="bolita1" class="bolita"></span>  
+              </div>
+            </label>
+          </div>
+          <div class="option2Container row">
+            <i class="iconsOptions fas fa-adjust"></i>
+            <p class="subTitle textOptions" >Color contraste </p> 
+            <label class="switch">
+              <input id="checkbox2" type="checkbox"/>
+              <div id="slider2" class="slider">
+                <span id="bolita2" class="bolita"></span>  
+              </div>
+            </label>
+          </div>
+        </div>
           <!--contenedor botones de login-->
     </section>
     <!-- Cierre Seccion login -->
