--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body>
     <section class="loginMainContainer">
+            <form class="form-signin" data-ember-action="2">            
+                    <a class="btn btn-primary social-login-btn social-facebook" onclick="facebookLoginWithFirebase()"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-primary social-login-btn social-google" onclick="googleLoginWithFirebase()"><i class="fab fa-google-plus"></i></a>
+          </form>    
         <!-- Seccion login -->
         <div>
             <!--logo contenedor-->
