guardando cambios para hacer merge con auth

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
           <!--contenedor botones de login-->
-        <div class="container">
+        <div class="container authButtonContainer">
             <div class="row">
               <div class="col m-6">
                 <button class="buttonLogin fb" > 
