--- a/index.html
+++ b/index.html
@@ -2,23 +2,15 @@
 <html lang="en">
 
 <head>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <!--link a css-->
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="src/styles/loginStyle.css">
-  <link rel="stylesheet" href="src/styles/mapViewStyle.css">
-  <link rel="stylesheet" href="src/styles/placeInfoStyle.css">
-  <!--CDN Iconos-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <!--Tipografia-->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" >
-  <!--CDN Bootstrap-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-   <!--HereMaps SDK-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <!--link a css-->
+    <link rel="stylesheet" href="style.css">
+    <!--CDN Iconos-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <!--HereMaps SDK-->
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1533195059" />
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
@@ -30,56 +22,33 @@
 <body>
     <section class="loginMainContainer">
         <!-- Seccion login -->
-        <div class="containter logoContainer" >
+        <div>
             <!--logo contenedor-->
-            <img class="logoImg" alt="logo de la aplicacion" src="src/img/logoMiercoles.jpeg" />
+            <img class="logoImg" alt="logo de la aplicacion" src="" />
         </div>
-        <div class="optionsContainer container">
-          <!--opciones de interfaz-->
-          <div class="option1Container row">
-            <i class="iconsOptions fas fa-headphones"></i>
-            <p class="subTitle textOptions" >Dictado por voz </p> 
+        <div>
+            <!--opciones de interfaz-->
+            <i class="fas fa-headphones"></i>
+            <p>Dictado por voz</p>
             <label class="switch">
-              <input id="checkbox1" type="checkbox"/>
-              <div id="slider1" class="slider">
-                <span id="bolita1" class="bolita"></span>  
-              </div>
-            </label>
-          </div>
-          <div class="option2Container row">
-            <i class="iconsOptions fas fa-adjust"></i>
-            <p class="subTitle textOptions" >Color contraste </p> 
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+
+            <i class="fas fa-adjust"></i>
+            <p>Color contraste</p>
             <label class="switch">
-              <input id="checkbox2" type="checkbox"/>
-              <div id="slider2" class="slider">
-                <span id="bolita2" class="bolita"></span>  
-              </div>
-            </label>
-          </div>
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
         </div>
-          <!--contenedor botones de login-->
-        <div class="container">
-            <div class="row">
-              <div class="col m-6">
-                <button class="buttonLogin fb" > 
-                  <i class="iconsAuth fab fa-facebook-f"></i>
-                  FACEBOOK 
-                </button > 
-              </div>
-            </div>
-            <div class="row">
-              <div class="col m-6">
-                <button class="buttonLogin google" >
-                  <i class="iconsAuth fab fa-google-plus-g"></i>  
-                  GOOGLE 
-                </button > 
-              </div>
-            </div>
-          </div>  
+        <div>
+            <!--contenedor botones de login-->
+        </div>
     </section>
     <!-- Cierre Seccion login -->
 
-    <section class="mapViewMainContainer" >
+    <section>
         <!-- Seccion MapView -->
         <div>
             <!--Header-->
@@ -87,7 +56,7 @@
             <p>Bienvenido usuario</p>
         </div>
         <!--Cierre Header-->
-        <div id="map" style="width: 100%; height: 400px; background: grey">
+        <div id="map-container" class="map">
             <!-- map place -->
         </div>
         <div>
@@ -101,7 +70,7 @@
     <!-- Cierre Seccion MapView -->
 
 
-    <section class="placeInfoMainContainer">
+    <section>
         <!-- Seccion PlaceInfo-->
         <div>
             <!--Header-->
@@ -146,9 +115,6 @@
         };
         firebase.initializeApp(config);
     </script>
-    <!--Script de bootstrap-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
