--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!--link a css-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/styles/loginStyle.css">
+    <link rel="stylesheet" href="src/styles/mapViewStyle.css">
+    <link rel="stylesheet" href="src/styles/placeInfoStyle.css">
     <!--CDN Iconos-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <!--Tipografia-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <!--CDN Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!--HereMaps SDK-->
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1533195059" />
     <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
@@ -22,28 +30,32 @@
 <body>
     <section class="loginMainContainer">
         <!-- Seccion login -->
-        <div>
+        <div class="containter logoContainer">
             <!--logo contenedor-->
-            <img class="logoImg" alt="logo de la aplicacion" src="" />
+            <img class="logoImg" alt="logo de la aplicacion" src="src/img/logoMiercoles.jpeg" />
         </div>
-        <div>
+        <div class="optionsContainer container">
             <!--opciones de interfaz-->
-            <i class="fas fa-headphones"></i>
-            <p>Dictado por voz</p>
-            <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
-
-            <i class="fas fa-adjust"></i>
-            <p>Color contraste</p>
-            <label class="switch">
-          <input type="checkbox">
-          <span class="slider round"></span>
-        </label>
-        </div>
-        <div>
-            <!--contenedor botones de login-->
+            <div class="option1Container row">
+                <i class="iconsOptions fas fa-headphones"></i>
+                <p class="subTitle textOptions">Dictado por voz </p>
+                <label class="switch">
+              <input id="checkbox1" type="checkbox"/>
+              <div id="slider1" class="slider">
+                <span id="bolita1" class="bolita"></span>  
+              </div>
+            </label>
+            </div>
+            <div class="option2Container row">
+                <i class="iconsOptions fas fa-adjust"></i>
+                <p class="subTitle textOptions">Color contraste </p>
+                <label class="switch">
+              <input id="checkbox2" type="checkbox"/>
+              <div id="slider2" class="slider">
+                <span id="bolita2" class="bolita"></span>  
+              </div>
+            </label>
+            </div>
         </div>
         <!--contenedor botones de login-->
         <div class="container">
@@ -67,7 +79,7 @@
     </section>
     <!-- Cierre Seccion login -->
 
-    <section>
+    <section class="mapViewMainContainer" >
         <!-- Seccion MapView -->
         <div>
             <!--Header-->
@@ -75,7 +87,7 @@
             <p>Bienvenido usuario</p>
         </div>
         <!--Cierre Header-->
-        <div id="map-container" class="map">
+        <div id="map" style="width: 100%; height: 400px; background: grey">
             <!-- map place -->
         </div>
         <div>
@@ -89,7 +101,7 @@
     <!-- Cierre Seccion MapView -->
 
 
-    <section>
+    <section class="placeInfoMainContainer">
         <!-- Seccion PlaceInfo-->
         <div>
             <!--Header-->
