--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p>Bienvenido usuario</p>
         </div>
         <!--Cierre Header-->
-        <div id="map" style="width: 100%; height: 400px; background: grey">
+        <div id="map" style="width: 100vw; height: 100vh; background: grey">
             <!-- map place -->
         </div>
         <div>
@@ -151,6 +151,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="src/scripts/loginModel.js"></script>
+    <script src="src/scripts/mapModel.js"></script>
 </body>
 
 </html>
