--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,158 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/5.5.2/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/5.5.2/firebase-auth.js"></script>
-    <script defer src="/__/firebase/5.5.2/firebase-database.js"></script>
-    <script defer src="/__/firebase/5.5.2/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/5.5.2/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+<head>
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
-    </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <!--link a css-->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="src/styles/loginStyle.css">
+  <link rel="stylesheet" href="src/styles/mapViewStyle.css">
+  <link rel="stylesheet" href="src/styles/placeInfoStyle.css">
+  <!--CDN Iconos-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <!--Tipografia-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" >
+  <!--CDN Bootstrap-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   <!--HereMaps SDK-->
+    <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1533195059" />
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+    <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
 
+</head>
+
+<body>
+    <section class="loginMainContainer">   
+        <!-- Seccion login -->
+        <div class="containter logoContainer" >
+            <!--logo contenedor-->
+            <img class="logoImg" alt="logo de la aplicacion" src="src/img/logoMiercoles.jpeg" />
+        </div>
+        <div class="optionsContainer container">
+          <!--opciones de interfaz-->
+          <div class="option1Container row">
+            <i class="iconsOptions fas fa-headphones"></i>
+            <p class="subTitle textOptions" >Dictado por voz </p> 
+            <label class="switch">
+              <input id="checkbox1" type="checkbox"/>
+              <div id="slider1" class="slider">
+                <span id="bolita1" class="bolita"></span>  
+              </div>
+            </label>
+          </div>
+          <div class="option2Container row">
+            <i class="iconsOptions fas fa-adjust"></i>
+            <p class="subTitle textOptions" >Color contraste </p> 
+            <label class="switch">
+              <input id="checkbox2" type="checkbox"/>
+              <div id="slider2" class="slider">
+                <span id="bolita2" class="bolita"></span>  
+              </div>
+            </label>
+          </div>
+        </div>
+          <!--contenedor botones de login-->
+        <div class="container authButtonContainer">
+            <div class="row">
+              <div class="col m-6">
+                <button class="btn buttonLogin fb" onclick="facebookLoginWithFirebase()"> 
+                  <i class="iconsAuth fab fa-facebook-f"></i>
+                  FACEBOOK 
+                </button > 
+              </div>
+            </div>
+            <div class="row">
+              <div class="col m-6">
+                <button class="btn buttonLogin google" onclick="googleLoginWithFirebase()">
+                  <i class="iconsAuth fab fa-google-plus-g"></i>  
+                  GOOGLE 
+                </button > 
+              </div>
+            </div>
+          </div>  
+    </section>
+    <!-- Cierre Seccion login -->
+
+    <section class="mapViewMainContainer" >
+        <!-- Seccion MapView -->
+        <div class="userInfoContainer">
+          <!--Header-->
+          <img id="userPicture" class="userImg rounded-circle" alt="foto de perfil" />
+          <p>Bienvenido usuario</p>
+        </div>
+        <!--Cierre Header-->
+        <div id="map" style="width: 100%; height: 400px; background: grey">
+            <!-- map place -->
+        </div>
+        <div>
+          <!--Footer-->
+          <button><img class="buttonIcon" alt="boton de ver rutas" src=""/>Icono 1</button>
+          <button><img class="buttonIcon" alt="boton de activar ruta por voz" src=""/>Icono 2</button>
+          <button><img class="buttonIcon" alt="boton de geolocalizacion" src=""/>Icono 3</button>
+        </div>
+        <!-- Cierre Footer-->
+    </section>
+    <!-- Cierre Seccion MapView -->
+
+
+    <section class="placeInfoMainContainer">
+        <!-- Seccion PlaceInfo-->
+        <div>
+            <!--Header-->
+            <button><img class="buttonBack" alt="boton para volver al mapa" src=""/>Back</button>
+        </div>
+        <!--Cierre Header-->
+
+        <div>
+            <!--PlaceImage-->
+            <p>Nombre del lugar</p>
+            <img class="buttonBack" alt="Imagen del lugar elegido" src="" />
+
+            <div class="interacionBar">
+                <!--interaccion bar-->
+                <button><img class="buttonLike" alt="boton de dar me gusta al lugar" src=""/></button>
+                <button><img class="buttonLike" alt="boton de no dar no me gusta" src=""/></button>
+                <button><img class="buttonLike" alt="boton de comentarios" src=""/></button>
+            </div>
+            <!--Cierre interaccion bar-->
+
+        </div>
+        <!-- Cierre PlaceImage-->
+        <div>
+            <!--InfoPlaceText-->
+            <p> Informacion del lugar elegido</p>
+        </div>
+        <!--Cierre InfoPlaceText-->
+    </section>
+    <!-- Cierre Seccion PlaceInfo -->
+
+    <!-- SDK firebase -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyD0qApe-0YVW1GoswGYRN4bk1Y5NqV1Bz4",
+            authDomain: "here-c4ef1.firebaseapp.com",
+            databaseURL: "https://here-c4ef1.firebaseio.com",
+            projectId: "here-c4ef1",
+            storageBucket: "here-c4ef1.appspot.com",
+            messagingSenderId: "156546685994"
+        };
+        firebase.initializeApp(config);
     </script>
+    <!--Script de bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!--scripts locales-->
+    <script src="src/scripts/controller.js"></script>
+    <script src="src/scripts/loginModel.js"></script>
+
   </body>
 </html>
