--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </button>
         </div>
         <!--Cierre Header-->
-        <div id="map" style="width: 100vw; height: 100vh; background: grey">
+        <div id="mapContainer" style="width: 100vw; height: 100vh">
             <!-- map place -->
         </div>
         <div class="footerContainer" >
@@ -137,7 +137,7 @@
 
         </div>
         <!-- Cierre PlaceImage-->
-        <div>
+        <div listContent>
             <!--InfoPlaceText-->
             <p> Informacion del lugar elegido</p>
         </div>
