prueba de voz con libreria ayrtom

--- a/index.html
+++ b/index.html
@@ -164,15 +164,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <!--scripts locales-->
-    <script src="src/scripts/controller.js"></script>
-    <script src="src/scripts/loginModel.js"></script>
+    <!--<script src="src/scripts/controller.js"></script>-->
+    <!--<script src="src/scripts/loginModel.js"></script>-->
 
-    <script src="src/scripts/mapModel.js"></script>
+    <!--<script src="src/scripts/mapModel.js"></script>-->
+    <!--<script src="src/scripts/optionVoiceModel.js"></script>-->
+
+    <script src="./node_modules/artyom.js/build/artyom.window.js"></script>
+<script>
+    var Jarvis = new Artyom();
+
+    Jarvis.say("hola Bienvenido a NUestra Rutapp!");
+</script>
 </body>
 
-</html>
-
-
-  </body>
 </html>
 
