--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>  <!--Cierre Header-->  
   
           <!--body de section-->
-          <div class="container-fluid"> 
+          <div class="bodyList container-fluid"> 
             <!--PlaceList-->
             <div class="row"> 
               <div class="col-8" >
